side-hover panel: fix z-index

--- a/app/styles/layout/side-hover-panel/styles.less
+++ b/app/styles/layout/side-hover-panel/styles.less
@@ -6,7 +6,7 @@
   // Container (and backdrop if specified) dimensions
   height: 100%;
   width: 100%;
-  z-index: 25;
+  z-index: 15;
   pointer-events: none;
 
   .panel-backdrop {
